--- a/Assets/style.css
+++ b/Assets/style.css
@@ -4,7 +4,7 @@ body {
     margin: 10px;
 }
 
-#terminal {
+#Terminal {
     width: 100%;
     height: 97vh;
 }
@@ -15,10 +15,10 @@ body {
 }
 
 /* Hide the screen by default */
-#screen {
+#DebugScreen {
     display: none;
 }
 
-#screen.visible {
+#DebugScreen.visible {
     display: block;
 }
